<?xml version="1.0"?>
<!--
  ~ Copyright (c) 2010-2022, sikuli.org, sikulix.com - MIT license
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.sikulix</groupId>
  <artifactId>sikulixide</artifactId>
  <version>2.0.6-SNAPSHOT</version>

  <name>SikuliX IDE</name>
  <description>... edit and run SikuliX scripts</description>

  <url>http://www.sikulix.com</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.sikulix.com/disclaimer/#license</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>RaiMan</id>
      <name>Raimund Hocke</name>
      <email>rmhdevelop@me.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:RaiMan/SikuliX1.git</connection>
    <developerConnection>scm:git:git@github.com:RaiMan/SikuliX1.git</developerConnection>
    <url>git@github.com:RaiMan/SikuliX1.git</url>
  </scm>

  <repositories>
    <repository>
      <id>OSSRH</id>
      <snapshots></snapshots>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
  </repositories>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sikulixjythonversion>2.7.3</sikulixjythonversion>
    <sikulixjrubyversion>9.4.1.0</sikulixjrubyversion>
    <timestamp>${maven.build.timestamp}</timestamp>
    <maven.build.timestamp.format>yyyy-MM-dd_HH:mm</maven.build.timestamp.format>
    <sikulixbuildingfor></sikulixbuildingfor>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.sikulix</groupId>
      <artifactId>sikulixapi</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.python</groupId>
      <artifactId>jython-standalone</artifactId>
      <version>${sikulixjythonversion}</version>
      <!--      <optional>true</optional>-->
    </dependency>
    <dependency>
      <groupId>org.jruby</groupId>
      <artifactId>jruby-complete</artifactId>
      <version>${sikulixjrubyversion}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.explodingpixels</groupId>
      <artifactId>mac_widgets</artifactId>
      <version>0.9.5</version>
    </dependency>
    <dependency>
      <groupId>org.swinglabs</groupId>
      <artifactId>swing-layout</artifactId>
      <version>1.0.3</version>
    </dependency>
    <dependency>
      <groupId>net.oneandone.reflections8</groupId>
      <artifactId>reflections8</artifactId>
      <version>0.11.6</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.9.10</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.9.10.8</version>
    </dependency>
  </dependencies>

  <profiles>
    <!-- complete-jar-->
    <profile>
      <id>complete-jar</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <sikulixbuildingfor>makeide.xml</sikulixbuildingfor>
      </properties>
    </profile>
    <!-- complete-jar Windows only-->
    <profile>
      <id>complete-win-jar</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <sikulixbuildingfor>makeide-win.xml</sikulixbuildingfor>
      </properties>
    </profile>
    <!-- complete-jar Mac only-->
    <profile>
      <id>complete-mac-jar</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <sikulixbuildingfor>makeide-mac.xml</sikulixbuildingfor>
      </properties>
    </profile>
    <!-- complete-jar Mac M1 only-->
    <profile>
      <id>complete-macm-jar</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <sikulixbuildingfor>makeide-macm.xml</sikulixbuildingfor>
      </properties>
    </profile>
    <!-- complete-jar Linux only-->
    <profile>
      <id>complete-lux-jar</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <sikulixbuildingfor>makeide-lux.xml</sikulixbuildingfor>
      </properties>
    </profile>
  </profiles>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>Settings/*</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
        <excludes>
          <exclude>Settings/*</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.0.0</version>
        <configuration>
          <outputDirectory>
            src/main/resources/Settings/LicenseIDE
          </outputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <archive>
            <addMavenDescriptor>false</addMavenDescriptor>
            <manifestEntries>
              <!--- for JRuby 9.x and Java 17+ -->
              <Add-Opens>java.base/sun.nio.ch java.base/java.io</Add-Opens>
              <X-SikuliX-BuiltWith>${sikulixbuildingfor}</X-SikuliX-BuiltWith>
            </manifestEntries>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <mainClass>org.sikuli.ide.Sikulix</mainClass>
            </manifest>
          </archive>
          <descriptors>
            <descriptor>${sikulixbuildingfor}</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
